#59997: Enable ADFS login for Helpdesk. Fixes and enhancements.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Infrastructure\Authentication\Behaviors\WindowsAuthenticationBehavior.cs" />
     <Compile Include="Infrastructure\Authentication\ClaimsExtensions.cs" />
     <Compile Include="Infrastructure\Authentication\Behaviors\FormsAuthenticationBehavior.cs" />
+    <Compile Include="Infrastructure\Authentication\FederatedAuthenticationConfiguration.cs" />
     <Compile Include="Infrastructure\Authentication\HelpdeskAuthenticationFilter.cs" />
     <Compile Include="Infrastructure\WorkContext\Concrete\SessionContext.cs" />
     <Compile Include="Infrastructure\Configuration\Concrete\AdfsConfiguration.cs" />
