--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/log4net.config
@@ -10,9 +10,9 @@
       <conversionPattern value="%date{dd MMM yyyy HH:mm:ss} %-5p %c - %m%n" />
     </layout>
   </appender>
-  <appender name="SsoRollingFileAppender" type="log4net.Appender.RollingFileAppender">
+  <appender name="SessionRollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <lockingmodel type="log4net.Appender.FileAppender+MinimalLock" />
-    <param name="File" value="Logs/sso.log" />
+    <param name="File" value="Logs/session.log" />
     <param name="AppendToFile" value="true" />
     <param name="MaximumFileSize" value="1000KB" />
     <param name="MaxSizeRollBackups" value="5" />
@@ -20,17 +20,18 @@
       <conversionPattern value="%date{dd MMM yyyy HH:mm:ss} - %m%n" />
     </layout>
   </appender>
+  <logger name="AppErrorLog">
+    <level value="ALL" />
+    <appender-ref ref="RollingLogFileAppender" />
+  </logger>
+
+  <logger name="SessionLog">
+    <level value="WARN" />
+    <appender-ref ref="SessionRollingFileAppender" />
+  </logger>
   <root>
     <!-- Value of priority may be ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
-    <priority value="ALL" />
+    <priority value="WARN" />
     <appender-ref ref="RollingFileAppender" />
   </root>
-  <logger name="debug" additivity="false">
-    <level value="DEBUG" />
-    <appender-ref ref="RollingFileAppender" />
-  </logger>
-  <logger name="sso" additivity="false">
-    <level value="DEBUG" />
-    <appender-ref ref="SsoRollingFileAppender" />
-  </logger>
 </log4net>
