--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config.template
@@ -27,9 +27,23 @@
       <conversionPattern value="%newline%property{log4net:HostName} :: %level :: %date :: %logger%newline%message%newline" />
     </layout>
   </appender>
+  <appender name="SessionRollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <lockingmodel type="log4net.Appender.FileAppender+MinimalLock" />
+    <param name="File" value="../Logs/session.log" />
+    <param name="AppendToFile" value="true" />
+    <param name="MaximumFileSize" value="1000KB" />
+    <param name="MaxSizeRollBackups" value="5" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date{dd MMM yyyy HH:mm:ss} - %m%n" />
+    </layout>
+  </appender>
   <logger name="AppErrorLog">
     <level value="ALL" />
     <appender-ref ref="RollingLogFileAppender" />
     <appender-ref ref="SmtpAppender" />
+  </logger>
+  <logger name="SessionLog">
+    <level value="WARN" />
+    <appender-ref ref="SessionRollingFileAppender" />
   </logger>
 </log4net>
