[UPD]#60380 Removing sensetive information from logs. Code clean up.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -341,6 +341,7 @@
     <Compile Include="Infrastructure\Authentication\Behaviors\FormsAuthenticationBehavior.cs" />
     <Compile Include="Infrastructure\Authentication\FederatedAuthenticationConfiguration.cs" />
     <Compile Include="Infrastructure\Authentication\HelpdeskAuthenticationFilter.cs" />
+    <Compile Include="Infrastructure\Utilities\CaseDiagnosticService.cs" />
     <Compile Include="Infrastructure\WorkContext\Concrete\SessionContext.cs" />
     <Compile Include="Infrastructure\Configuration\Concrete\AdfsConfiguration.cs" />
     <Compile Include="Infrastructure\Cryptography\AESCryptoProvider.cs" />
