--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Models\CaseDocument\CaseDocumentTemplateModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextConditionIdentifierModel.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
+    <Compile Include="Models\Case\CaseSolutionOverview.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
     <Compile Include="Models\Condition\ConditionModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextIdentifierModel.cs" />
