--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
+    <Compile Include="Models\Case\WorkingGroupInfo.cs" />
     <Compile Include="Models\Condition\ConditionModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextIdentifierModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextConditionModel.cs" />
