--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
+    <Compile Include="Models\Case\UserWorkingGroupOverview.cs" />
     <Compile Include="Models\Case\WorkingGroupInfo.cs" />
     <Compile Include="Models\ComputerUserCategoryOverview.cs" />
     <Compile Include="Models\Condition\ConditionModel.cs" />
@@ -256,6 +257,7 @@
     <Compile Include="Models\Contract\ContractSelectedFilter.cs" />
     <Compile Include="Models\Contract\ContractsSettingRowModel.cs" />
     <Compile Include="Models\Contract\ContractInputModel.cs" />
+    <Compile Include="Models\Customer\CaseDefaultsInfo.cs" />
     <Compile Include="Models\Customer\UserCustomerOverview.cs" />
     <Compile Include="Models\DailyReport\Input\DailyReportUpdate.cs" />
     <Compile Include="Models\Accounts\AccountSettings\Read\ModelEdit\AccountFieldsSettingsForModelEdit.cs" />
@@ -941,6 +943,7 @@
     <Compile Include="Models\Supplier\Output\SupplierOverview.cs" />
     <Compile Include="Models\Systems\Output\SystemOverview.cs" />
     <Compile Include="Models\Translation2.cs" />
+    <Compile Include="Models\User\CustomerUserInfo.cs" />
     <Compile Include="Models\WebApi\WebApiCredentialModel.cs" />
     <Compile Include="Models\WorkflowStepModel.cs" />
     <Compile Include="Models\Users\Input\UserModule.cs" />
