--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -170,6 +170,7 @@
     <Compile Include="ExtendedCaseEntity\ExtendedCaseForm.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
+    <Compile Include="Interfaces\IUserCommon.cs" />
     <Compile Include="LogFileExisting.cs" />
     <Compile Include="Mail2Ticket.cs" />
     <Compile Include="FormUrl.cs" />
