--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
     <Compile Include="Models\Case\UserWorkingGroupOverview.cs" />
     <Compile Include="Models\Case\WorkingGroupInfo.cs" />
+    <Compile Include="Models\Changes\ChangeListItem.cs" />
     <Compile Include="Models\ComputerUserCategoryOverview.cs" />
     <Compile Include="Models\Condition\ConditionModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextIdentifierModel.cs" />
