--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -487,6 +487,7 @@
     <Compile Include="Models\Questionnaire\Read\QuestionnaireQuestionOverview.cs" />
     <Compile Include="Models\Questionnaire\Write\Answer.cs" />
     <Compile Include="Models\Questionnaire\Write\ParticipantForInsert.cs" />
+    <Compile Include="Models\RegionOverview.cs" />
     <Compile Include="Models\ReportService\ReportData.cs" />
     <Compile Include="Models\ReportService\ReportFilter.cs" />
     <Compile Include="Models\Reports\Data\CaseSatisfaction\CaseSatisfactionReportResponse.cs" />
