--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Constants\BRConstItem.cs" />
     <Compile Include="Constants\UserAccessRole.cs" />
     <Compile Include="Constraints\NotifierConstraint.cs" />
+    <Compile Include="Enums\AdditionalDataPrivacyFields.cs" />
     <Compile Include="Enums\AppSettingsKey.cs" />
     <Compile Include="Enums\Condition\ConditionType.cs" />
     <Compile Include="Enums\Condition\ConditionOperator.cs" />
