--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
@@ -5,22 +5,22 @@
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
     <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=4.0.0.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-
   <appSettings>
     <add key="EnvName" value="Dev" />
+    <add key="Customers" value="46" />
+    <add key="Path" value="" />
   </appSettings>
-
   <connectionStrings>
     <!-- Dev -->
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=localhost;Initial Catalog=DH_Support;Password=Asd123!;User ID=devUser;MultipleActiveResultSets=True;Connection Lifetime=3;" providerName="System.Data.SqlClient" />-->
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <common>
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net208">
@@ -29,7 +29,6 @@
       </factoryAdapter>
     </logging>
   </common>
-  
   <quartz>
     <add key="quartz.scheduler.instanceName" value="QuartzScheduler" />
     <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
@@ -54,4 +53,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
