--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/packages.config
@@ -5,6 +5,7 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Log4Net208" version="3.4.1" targetFramework="net452" />
   <package id="CsvHelper" version="6.0.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
