[FIX]#60540: Possibility to move case to customer without user rights. Case type matching fixes.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Enums\SortBy.cs" />
     <Compile Include="Enums\SurveyVoteResult.cs" />
     <Compile Include="Enums\ValueCompare.cs" />
+    <Compile Include="Exceptions\HelpdeskException.cs" />
     <Compile Include="Exceptions\PropertyNotFoundException.cs" />
     <Compile Include="Extensions\Boolean\BoolExtensions.cs" />
     <Compile Include="Extensions\Boolean\ToIntExtension.cs" />
