--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -169,6 +169,7 @@
     <Compile Include="ExtendedCaseEntity\ExtendedCaseData.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseForm.cs" />
     <Compile Include="GDPR\GDPRDataPrivacyAccess.cs" />
+    <Compile Include="GDPR\GDPRDataPrivacyFavorite.cs" />
     <Compile Include="GDPR\GDPROperationsAudit.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
