--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -3345,6 +3345,11 @@
     <Content Include="Areas\Inventory\Views\Printer\PrinterRelatedCases.cshtml" />
     <Content Include="Areas\Inventory\Views\CustomInventory\_EditCustomInventoryLayout.cshtml" />
     <Content Include="Areas\Inventory\Views\CustomInventory\CustomInventoryRelatedCases.cshtml" />
+    <Content Include="Areas\Orders\Views\OrderFieldSettings\EditorTemplates\OrderFieldTypeSettingsModel.cshtml" />
+    <Content Include="Areas\Orders\Views\Orders\EditorTemplates\AccountInfoEditModel.cshtml" />
+    <Content Include="Areas\Orders\Views\Orders\EditorTemplates\ContactEditModel.cshtml" />
+    <Content Include="Areas\Orders\Views\Orders\EditorTemplates\Fields\Flag.cshtml" />
+    <Content Include="Areas\Orders\Views\Orders\EditorTemplates\Fields\MultiSelectList.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx" />
     <Content Include="Content\js\Shared\custom.validation.reuiredifnotempty.js" />
