[UPD] CSV file Logging

--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
@@ -12,9 +12,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="EnvName" value="Dev" />
-    <add key="Customers" value="749" />
-    <add key="Path" value="" />
+    <add key="EnvName" value="Dev" />    
+    <add key="LogPath" value="C:\InitiatorsLogs" />
   </appSettings>
   <connectionStrings>
     <!-- Dev -->
