[FIX] Initiator import 60858

--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
@@ -12,8 +12,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="EnvName" value="Dev" />    
+    <add key="EnvName" value="Dev" />
     <add key="LogPath" value="C:\InitiatorsLogs" />
+    <add key="DailyReport" value="0" />
+    <add key="InitiatorImport" value="1" />
   </appSettings>
   <connectionStrings>
     <!-- Dev -->
