[ADD]#60964  'GDPR - Data Privacy - History'

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -303,7 +303,9 @@
     <Compile Include="Models\Feedback\FeedbackQuestionOption.cs" />
     <Compile Include="Models\Feedback\FeedbackQuestionOverview.cs" />
     <Compile Include="Models\FinishingCause\FinishingCauseItem.cs" />
+    <Compile Include="Models\Gdpr\DataPrivacyParameters.cs" />
     <Compile Include="Models\Gdpr\GdprFavoriteModel.cs" />
+    <Compile Include="Models\Gdpr\GdprOperationsAuditOverview.cs" />
     <Compile Include="Models\Grid\CaseOverviewColumnDefinition.cs" />
     <Compile Include="Models\Grid\GridColumnDefinition.cs" />
     <Compile Include="Models\Grid\GridSettingsModel.cs" />
