--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -138,6 +138,7 @@
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseValuesConfiguration.cs" />
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseDataConfiguration.cs" />
     <Compile Include="EntityConfigurations\ExtendedCaseEntity\ExtendedCaseFormConfiguration.cs" />
+    <Compile Include="EntityConfigurations\FormFieldValueHistoryConfiguration.cs" />
     <Compile Include="EntityConfigurations\GDPR\GDPRDataPrivacyAccessConfiguration.cs" />
     <Compile Include="EntityConfigurations\GDPR\GDPRDataPrivacyFavoriteConfiguration.cs" />
     <Compile Include="EntityConfigurations\GDPR\GDPROperationsAuditConfiguration.cs" />
