--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -311,6 +311,7 @@
     <Compile Include="Models\Grid\GridSettingsModel.cs" />
     <Compile Include="Models\IdName.cs" />
     <Compile Include="Models\Inventory\InventorySearchResult.cs" />
+    <Compile Include="Models\Inventory\Output\Computer\ComputerTypeOverview.cs" />
     <Compile Include="Models\Invoice\CaseInvoiceOrderFile.cs" />
     <Compile Include="Models\Invoice\InvoiceArticleProductAreaSelectedFilter.cs" />
     <Compile Include="Models\Invoice\InvoiceArticleProductArea.cs" />
