[FIX] - #61445 - Missed files fix

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -36,7 +36,7 @@
   <selfServiceConfigurable>
     <selfServiceUrlSetting>
       <deniedUrls>
-        <!--<url key="0" path="/case/Index*" />
+        <url key="0" path="/case/Index*" />
         <url key="1" path="/case/NewCase/*" />
         <url key="2" path="/case/UserCases*" />
         <url key="3" path="/Documents*" />
@@ -46,7 +46,7 @@
         <url key="7" path="/Start*" />      
         <url key="8" path="/Case/SearchUserCase*" />
         <url key="9" path="/case?*" />                
-        <url key="10" path="/Case/ExtendedCase*" />-->
+        <url key="10" path="/Case/ExtendedCase*" />
       </deniedUrls>
       
       <allowedUrls>
