--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/App.config
@@ -15,12 +15,18 @@
     <add key="EnvName" value="Dev" />
     <add key="LogPath" value="C:\InitiatorsLogs" />
     <add key="DailyReport" value="0" />
-    <add key="InitiatorImport" value="1" />
+    <add key="InitiatorImport" value="0" />
+    <add key="GDPRTasks" value="1" />
   </appSettings>
   <connectionStrings>
     <!-- Dev -->
-    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=localhost;Initial Catalog=DH_Support;Password=Asd123!;User ID=devUser;MultipleActiveResultSets=True;Connection Lifetime=3;" providerName="System.Data.SqlClient" />-->
+    <add name="HelpdeskSqlServerDbContext" 
+         connectionString="Data Source=(local);Initial Catalog=DH_Support;uid=helpdesk;Password=;User ID=;MultipleActiveResultSets=True;Connection Lifetime=3;" 
+         providerName="System.Data.SqlClient" />
+    
+    <!--
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
+    -->
   </connectionStrings>
   <common>
     <logging>
