--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -173,6 +173,7 @@
     <Compile Include="GDPR\GDPRDataPrivacyFavorite.cs" />
     <Compile Include="GDPR\GDPROperationsAudit.cs" />
     <Compile Include="GDPR\GDPROperationStatus.cs" />
+    <Compile Include="GDPR\GDPRTask.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceChargeType.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
