--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/DH.Helpdesk.TaskScheduler.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/DH.Helpdesk.TaskScheduler.csproj
@@ -102,24 +102,30 @@
   <ItemGroup>
     <Compile Include="Components\FileDownloader.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="DI\DatabaseModule.cs" />
-    <Compile Include="DI\JobsModule.cs" />
-    <Compile Include="DI\NinjectJobFactory.cs" />
+    <Compile Include="DI\Modules\DatabaseModule.cs" />
+    <Compile Include="DI\Modules\InfrastructureModule.cs" />
+    <Compile Include="DI\Modules\JobsModule.cs" />
+    <Compile Include="DI\Modules\NinjectJobFactory.cs" />
     <Compile Include="DI\NinjectSchedulerFactory.cs" />
-    <Compile Include="DI\QuartzNinjectModule.cs" />
-    <Compile Include="DI\ServiceModule.cs" />
+    <Compile Include="DI\Modules\QuartzNinjectModule.cs" />
+    <Compile Include="DI\Modules\ServiceModule.cs" />
     <Compile Include="Dto\CompuerUsersFieldSetting.cs" />
     <Compile Include="Dto\CsvInputData.cs" />
     <Compile Include="Dto\DataLogModel.cs" />
     <Compile Include="Dto\ImportInitiator_JobSettings.cs" />
     <Compile Include="Dto\JobSettings.cs" />
     <Compile Include="Enums\FieldLenght.cs" />
-    <Compile Include="Helper\PropertyHelper.cs" />
+    <Compile Include="Helpers\PropertyHelper.cs" />
+    <Compile Include="Infrastructure\Configuration\ApplicationSettingsProvider.cs" />
+    <Compile Include="Jobs\DailReport\DailyReportJobInitializer.cs" />
+    <Compile Include="Jobs\Gdpr\GdprDataPrivacyJob.cs" />
+    <Compile Include="Jobs\Gdpr\GdprJobInitializer.cs" />
     <Compile Include="Jobs\Gdpr\GdprTasksManagerJob.cs" />
-    <Compile Include="Jobs\Gdpr\GDPRTasksService.cs" />
-    <Compile Include="Jobs\ImportInitiatorJob.cs" />
-    <Compile Include="Jobs\DailyReportJob.cs" />
-    <Compile Include="Jobs\SettingsTrackerJob.cs" />
+    <Compile Include="Jobs\IJobInitializer.cs" />
+    <Compile Include="Jobs\Import\ImportJobInitializer.cs" />
+    <Compile Include="Jobs\Import\ImportInitiatorJob.cs" />
+    <Compile Include="Jobs\DailReport\DailyReportJob.cs" />
+    <Compile Include="Jobs\DailReport\SettingsTrackerJob.cs" />
     <Compile Include="Infrastructure\Configuration\ServiceConfigurationManager.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
