--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -172,8 +172,8 @@
     <Compile Include="GDPR\GDPRDataPrivacyAccess.cs" />
     <Compile Include="GDPR\GDPRDataPrivacyFavorite.cs" />
     <Compile Include="GDPR\GDPROperationsAudit.cs" />
-    <Compile Include="GDPR\GDPROperationStatus.cs" />
     <Compile Include="GDPR\GDPRTask.cs" />
+    <Compile Include="GDPR\Enums\GDPRTaskStatus.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceChargeType.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
