[UPD] - #61055 - Export invoice time to Excel format changed

--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -296,6 +296,7 @@
     <Compile Include="DisplayValues\Questionnaire\CircularStatesDisplayValue.cs" />
     <Compile Include="DisplayValues\StringDisplayValue.cs" />
     <Compile Include="DisplayValues\StringsDisplayValue.cs" />
+    <Compile Include="DisplayValues\Reports\TimeDisplayValue.cs" />
     <Compile Include="DisplayValues\UserNameDisplayValue.cs" />
     <Compile Include="Enums\ExtendedCasePathTokens.cs" />
     <Compile Include="Exceptions\BusinessLogicException.cs" />
